app/assets/stylesheets/custom.css.scss
body {
  background: image-url('confectionary.png') repeat;
}

.logo {
  margin-right: 10px;
  margin-bottom: 5px;
}

.navbar {
  margin-right: 23px;
  margin-top: 23px;
}

#item-title {
  font-weight: bold;
  margin-top: 20px;
  margin-left: 30px;
  text-shadow: 0px 2px 3px #666;
}

#item-description {
  min-height: 25px;
  font-size: 20px;
  margin-left: 30px;
}

#item-price {
  min-height: 24px;
  font-size: 20px;
  margin-left: 30px;
}

#item-button {
  margin-left: 30px;
}

